set the date section at the middle of the image and background in 5 cards

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -330,6 +330,8 @@ body {
     background-color: #3CD8E8;
     border-radius: 48px;
     margin-left: 38px;
+    position: relative;
+    top: -30px;
 }
 
 .big-card-title{
@@ -370,6 +372,8 @@ body {
     padding: 9px 19px;
     border-radius: 48px;
     margin-left: 38px;
+    position: relative;
+    top: -30px;
 }
 
 .card-title{
@@ -378,6 +382,7 @@ body {
     color: black;
     line-height: 28.8px;
     margin-left: 38px;
+    margin-top: -15px;
 }
 
 .five-card-parent{
