--- a/Styles/style.css
+++ b/Styles/style.css
@@ -77,7 +77,7 @@ body {
 .nav-item2{
     font-size: 1.25rem;
     font-weight: 500;
-    color: skyblue;
+    color: #01ACFD;
     line-height: 30px;
 }
 
