--- a/Styles/style.css
+++ b/Styles/style.css
@@ -276,14 +276,29 @@ body {
 }
 
 
+.card-buttons-container{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
+.card-button1, .card-button2{
+    background-color: orange;
+    border-style: none;
+    padding: 20px;
+    border-radius: 30px;
+}
+
+.card-button1, .card-button2:hover{
+    cursor: pointer;
+}
+
 /* Two Icons Section Styles */
 
 .two-icons{
     display: flex;
-}
-
-.fa-solid{
-    background-color: orange;
 }
 
 
@@ -631,6 +646,13 @@ body {
         width: 357px;
     }
 
+    .card-buttons-container{
+        display: none;
+    }
+
+    .card-button1, .card-button2{
+        display: none;
+    }
 
     /* Our Story Section Styles */
 
