added a message in the css file for the teacher about firefox browser issue

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,13 @@ body {
 }
 /* Font Imported From Google Font */
 
+/* A comment from student: Assalamuwalaikum. Amar screen resolution 1920 x 1080. Ami chrome browser use kori. 
+Responsive er jonno ami 576px break point use korechi. 
+Chrome theke computer view website thik ache and ei break point er moddhe j phone model gulo ache, segulo o valo ache. 
+Niche kono scroll bar nai. MS Edge browser er a same. Sob thik ache Egde browser a. 
+Ami amar 2 ta real phone theke check korechi, sob thikthak ache. But Mozila Firefox browser a website kamon ultopalta dekhacche. 
+1 hr plus problem ta khujlam. But pelam na. 
+R marquee tag er somporke internet a ja bujhlam, segulo use korar try korechi. Agulo jananor jonnoi ei comment ta. Porar jonno dhonnobad! */
 
 *{
     margin: 0;
